--- a/Classes/View/Xebia/Essentials/XECategoryCell.xib
+++ b/Classes/View/Xebia/Essentials/XECategoryCell.xib
@@ -44,13 +44,14 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{20, 13}, {280, 18}}</string>
 								<reference key="NSSuperview" ref="840849820"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Card title</string>
+								<string key="IBUIText">Category title</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC42OTAxOTYwNzg0IDAuNjkwMTk2MDc4NCAwLjY5MDE5NjA3ODQAA</bytes>
@@ -94,7 +95,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUIAccessoryType">1</int>
 				<reference key="IBUIContentView" ref="840849820"/>
-				<string key="IBUIReuseIdentifier">XECard</string>
+				<string key="IBUIReuseIdentifier">XECategory</string>
 				<real value="44" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -106,7 +107,7 @@
 						<reference key="source" ref="506599320"/>
 						<reference key="destination" ref="894365236"/>
 					</object>
-					<int key="connectionID">51</int>
+					<int key="connectionID">55</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -135,7 +136,7 @@
 							<reference ref="894365236"/>
 						</array>
 						<reference key="parent" ref="0"/>
-						<string key="objectName">Card Cell - XECardCell</string>
+						<string key="objectName">Category Cell - XECategoryCell</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
@@ -150,7 +151,7 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="2.CustomClassName">XECardCell</string>
+				<string key="2.CustomClassName">XECategoryCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -158,7 +159,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">54</int>
+			<int key="maxID">55</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
