--- a/Classes/View/Menu/XBLeftMenuCell.xib
+++ b/Classes/View/Menu/XBLeftMenuCell.xib
@@ -42,7 +42,7 @@
 							<object class="IBUILabel" id="894365236">
 								<reference key="NSNextResponder" ref="840849820"/>
 								<int key="NSvFlags">260</int>
-								<string key="NSFrame">{{44, 2}, {231, 38}}</string>
+								<string key="NSFrame">{{44, 2}, {199, 38}}</string>
 								<reference key="NSSuperview" ref="840849820"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -98,7 +98,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUIAccessoryType">1</int>
 				<reference key="IBUIContentView" ref="840849820"/>
-				<string key="IBUIReuseIdentifier">XBMenu</string>
+				<string key="IBUIReuseIdentifier">XBLeftMenu</string>
 				<real value="40" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -152,7 +152,7 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="2.CustomClassName">XBMenuCell</string>
+				<string key="2.CustomClassName">XBLeftMenuCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -165,7 +165,7 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">XBMenuCell</string>
+					<string key="className">XBLeftMenuCell</string>
 					<string key="superclassName">UITableViewCell</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">titleLabel</string>
@@ -180,7 +180,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/XBMenuCell.h</string>
+						<string key="minorKey">./Classes/XBLeftMenuCell.h</string>
 					</object>
 				</object>
 			</array>
