--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -59,7 +59,7 @@
         <!--Navigation Controller-->
         <scene sceneID="owv-6G-Soi">
             <objects>
-                <navigationController storyboardIdentifier="leftNavigationController" definesPresentationContext="YES" id="EcE-bF-5J2" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="leftMenuNavigationController" definesPresentationContext="YES" id="EcE-bF-5J2" sceneMemberID="viewController">
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="gd5-l8-yrC">
@@ -74,10 +74,10 @@
             </objects>
             <point key="canvasLocation" x="-4801" y="88"/>
         </scene>
-        <!--Menu View Controller - Menu-->
+        <!--Left Menu View Controller - Menu-->
         <scene sceneID="vbd-ri-y8V">
             <objects>
-                <tableViewController storyboardIdentifier="menu" title="Menu" id="uwc-8N-vA9" customClass="XBMenuViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="leftMenu" title="Menu" id="uwc-8N-vA9" customClass="XBLeftMenuViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="yBM-IN-ReU">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -132,6 +132,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2mg-2v-wdL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-4801" y="844"/>
+        </scene>
+        <!--Right Menu View Controller - Agile Tools-->
+        <scene sceneID="9Cn-sX-dB6">
+            <objects>
+                <tableViewController storyboardIdentifier="rightMenu" id="i6q-Dn-g4s" customClass="XBRightMenuViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="9ep-bY-Txv">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Agile Tools" id="exd-FO-ZV2"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="REE-3f-Z7z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4305" y="1434"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="a8p-2o-1of">
+            <objects>
+                <navigationController storyboardIdentifier="rightMenuNavigationController" definesPresentationContext="YES" id="7Pp-3y-Rt5" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="1hj-dX-Osz">
+                        <rect key="frame" x="0.0" y="-44" width="0.0" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="i6q-Dn-g4s" kind="relationship" relationship="rootViewController" id="eeZ-Zt-M2V"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IO5-qX-wZC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4801" y="1434"/>
         </scene>
         <!--Home Controller - Home-->
         <scene sceneID="Tje-CE-REG">
@@ -378,7 +411,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p6a-mF-LHc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4485" y="-1262"/>
+            <point key="canvasLocation" x="-4486" y="-1262"/>
         </scene>
         <!--Github Repository Controller-->
         <scene sceneID="0nK-Ho-fRt">
@@ -690,6 +723,129 @@
         <image name="video_placeholder.png" width="320" height="180"/>
         <image name="xebia-essentials-sample-barcode.png" width="248" height="248"/>
     </resources>
+    <classes>
+        <class className="DTAttributedTextView" superclassName="UIScrollView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DTAttributedTextView.h"/>
+            <relationships>
+                <relationship kind="outlet" name="backgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="textDelegate"/>
+            </relationships>
+        </class>
+        <class className="EBEventTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EBEventTableViewController.h"/>
+        </class>
+        <class className="GHMemberTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHMemberTableViewController.h"/>
+        </class>
+        <class className="GHRepositoryTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHRepositoryTableViewController.h"/>
+        </class>
+        <class className="GHTabBarController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHTabBarController.h"/>
+        </class>
+        <class className="TTTweetTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TTTweetTableViewController.h"/>
+        </class>
+        <class className="UINavigationBar">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UINavigationBar.h"/>
+            <relationships>
+                <relationship kind="action" name="back:"/>
+            </relationships>
+        </class>
+        <class className="VMVideoDetailsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VMVideoDetailsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="commentCount" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="date" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="definition" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="displayName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="likeCount" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="playCount" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="videoImage" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="VMVideoTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VMVideoTableViewController.h"/>
+        </class>
+        <class className="WPAuthorTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPAuthorTableViewController.h"/>
+        </class>
+        <class className="WPCategoryTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPCategoryTableViewController.h"/>
+        </class>
+        <class className="WPPostTableViewController" superclassName="XBInfiniteScrollTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPPostTableViewController.h"/>
+        </class>
+        <class className="WPRecentPostTableViewController" superclassName="WPPostTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPRecentPostTableViewController.h"/>
+        </class>
+        <class className="WPTabBarController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPTabBarController.h"/>
+        </class>
+        <class className="WPTagTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPTagTableViewController.h"/>
+        </class>
+        <class className="XBHomeController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBHomeController.h"/>
+        </class>
+        <class className="XBInfiniteScrollTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBInfiniteScrollTableViewController.h"/>
+        </class>
+        <class className="XBLeftMenuViewController" superclassName="XBTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBLeftMenuViewController.h"/>
+        </class>
+        <class className="XBReloadableTableViewController" superclassName="XBTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBReloadableTableViewController.h"/>
+        </class>
+        <class className="XBRightMenuViewController" superclassName="XBTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBRightMenuViewController.h"/>
+        </class>
+        <class className="XBTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBTableViewController.h"/>
+        </class>
+        <class className="XBWebViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBWebViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="XECardDetailsPageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsPageViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="infoTapped:"/>
+                <relationship kind="action" name="qrCodeTapped:"/>
+                <relationship kind="outlet" name="categoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="contentTextView" candidateClass="DTAttributedTextView"/>
+                <relationship kind="outlet" name="descriptionBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="identifierLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="qrCodeImage" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="stripeView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="titleBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="XECardDetailsQRCodeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsQRCodeViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="identifierTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="qrCodeImageView" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="XECardDetailsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="changePage:"/>
+                <relationship kind="outlet" name="pageControl" candidateClass="UIPageControl"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+        <class className="XECardTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardTableViewController.h"/>
+        </class>
+        <class className="XECategoryTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECategoryTableViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
